--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "@aiherrera/react-hamburger": "^1.0.6",
-    "@storybook/theming": "^6.1.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -19,8 +18,11 @@
     "@babel/core": "^7.13.8",
     "@storybook/addon-actions": "^6.2.0-beta.4",
     "@storybook/addon-essentials": "^6.2.0-beta.4",
+    "@storybook/addon-knobs": "^6.1.21",
     "@storybook/addon-links": "^6.2.0-beta.4",
+    "@storybook/addon-storysource": "^6.1.21",
     "@storybook/react": "^6.2.0-beta.4",
+    "@storybook/theming": "^6.1.21",
     "babel-loader": "^8.2.2",
     "typescript": "^4.2.2"
   }
