--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@aiherrera/react-hamburger": "^1.0.6",
+    "@aiherrera/react-pricing-table": "^1.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -20,7 +22,6 @@
     "@storybook/addon-essentials": "^6.2.0-beta.4",
     "@storybook/addon-knobs": "^6.1.21",
     "@storybook/addon-links": "^6.2.0-beta.4",
-    "@storybook/addon-storysource": "^6.1.21",
     "@storybook/react": "^6.2.0-beta.4",
     "@storybook/theming": "^6.1.21",
     "babel-loader": "^8.2.2",
